--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img src="./assets/explorer.png" alt="Logo da Escola Rocketseat" />
         </div>
         <p>
-          Durante minha transição de carreira, tive a oportunidade de descobrir minha verdadeira paixão pela programação por meio do curso Explorer da Rocketseat. Foi nessa jornada que mergulhei de cabeça no estudo de linguagens e frameworks, encontrando imensa satisfação em criar soluções através do desenvolvimento de software. Com projetos pessoais, colaborações e participação em comunidades de desenvolvedores, aprimorei minhas habilidades e enfrentei desafios com entusiasmo. Agora, estou animado(a) para explorar novas oportunidades no mercado de trabalho como desenvolvedor(a), trazendo comigo todo o amor pela programação e o conhecimento adquirido na Rocketseat.
+          Durante minha transição de carreira, tive a oportunidade de descobrir minha verdadeira paixão pela programação por meio do curso Explorer da Rocketseat. Foi nessa jornada que mergulhei de cabeça no estudo de linguagens e frameworks, encontrando imensa satisfação em criar soluções através do desenvolvimento de software. Com projetos pessoais, colaborações e participação em comunidades de desenvolvedores, aprimorei minhas habilidades e enfrentei desafios com entusiasmo. Agora, estou animado para explorar novas oportunidades no mercado de trabalho como desenvolvedor(a), trazendo comigo todo o amor pela programação e o conhecimento adquirido na Rocketseat.
         </p>
       </section>
 
@@ -93,9 +93,9 @@ Para complementar meu conjunto de habilidades, também buscarei aprender sobre b
 
 Além disso, pretendo explorar o desenvolvimento mobile, seja com a criação de aplicativos nativos utilizando Swift ou Kotlin, ou através de frameworks multiplataforma como Flutter ou React Native.<br><br>
 
-Para me manter atualizado(a) e acompanhar as tendências do setor, planejo participar de conferências, workshops e seguir blogs e canais relevantes na área da programação. Também procurarei oportunidades de colaboração e trabalho em equipe, onde possa aprender com profissionais experientes e compartilhar conhecimento com colegas.<br><br>
+Para me manter atualizado e acompanhar as tendências do setor, planejo participar de conferências, workshops e seguir blogs e canais relevantes na área da programação. Também procurarei oportunidades de colaboração e trabalho em equipe, onde possa aprender com profissionais experientes e compartilhar conhecimento com colegas.<br><br>
 
-Em resumo, meus próximos passos envolvem a busca contínua por conhecimento e a exploração de novas tecnologias, frameworks e linguagens de programação. Estou ansioso(a) para embarcar nessa jornada de aprendizado e crescimento, aproveitando todas as oportunidades que surgirem para me tornar um(a) desenvolvedor(a) ainda mais completo(a) e preparado(a) para os desafios do mundo da programação.<br><br>
+Em resumo, meus próximos passos envolvem a busca contínua por conhecimento e a exploração de novas tecnologias, frameworks e linguagens de programação. Estou ansioso(a) para embarcar nessa jornada de aprendizado e crescimento, aproveitando todas as oportunidades que surgirem para me tornar um desenvolvedor ainda mais completo e preparado para os desafios do mundo da programação.<br><br>
         </p>
       </section>
     </nav>
